--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  image: ^4.1.7
+  carousel_slider: ^4.2.1
+  window_manager: ^0.3.8
 
 dev_dependencies:
   flutter_test:
