Added option to set userName, and if userName is not present, it will ask for it in a popup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   image: ^4.3.0
   carousel_slider: ^5.0.0
   window_manager: ^0.4.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
