--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   carousel_slider: ^5.0.0
   window_manager: ^0.4.2
   shared_preferences: ^2.3.2
+  flutter_svg: ^2.0.11
 
 dev_dependencies:
   flutter_test:
