--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   window_manager: ^0.4.2
   shared_preferences: ^2.3.2
   flutter_svg: ^2.0.11
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
