--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -21,12 +21,8 @@ jobs:
           channel: 'stable'
           cache: flutter
 
-      # Install Windows Build Tools (Flutter prerequisites)
-      - name: Install Windows Build Tools
-        run: |
-          choco install visualstudio2022buildtools --version=17.6.5.0 -y
-          choco install visualstudio2022-workload-vctools -y
-          choco install windows-sdk-10.0 -y
+      - name: Flutter Doctor
+        run: flutter doctor
 
       - name: Install Dependencies
         run: flutter pub get
@@ -61,6 +57,9 @@ jobs:
           flutter-version: '3.24.5'
           channel: 'stable'
           cache: flutter
+
+      - name: Flutter Doctor
+        run: flutter doctor
 
       - name: Install Dependencies
         run: flutter pub get
@@ -102,6 +101,9 @@ jobs:
           channel: 'stable'
           cache: flutter
 
+      - name: Flutter Doctor
+        run: flutter doctor
+
       - name: Install Dependencies
         run: flutter pub get
 
@@ -120,6 +122,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build libgtk-3-dev liblzma-dev
+
+      - name: Flutter Doctor for Linux
+        run: flutter doctor
 
       # Linux Build
       - name: Build Linux Binary
